<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.activity.Registeration">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/registeration_edname"
                android:hint="Enter your name"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter phone number"
                android:id="@+id/registeration_edphno"
                android:inputType="phone"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/tv_design"
                android:id="@+id/registeration_adress_zip">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Select State Zip (Click Me!)"
                    android:id="@+id/registeration_tvstate"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/tv_design"
                android:id="@+id/registeration_adress_town">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Select Town (Click Me!)"
                    android:id="@+id/registeration_tvtown"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/tv_design"
                android:id="@+id/registeration_radio">
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_centerInParent="true"
                    android:gravity="center">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/plant"
                        android:id="@+id/registeration_radio_plant"
                        android:onClick="onRadioButtonClicked"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/seed"
                        android:layout_marginLeft="16dp"
                        android:id="@+id/registeration_radio_seed"
                        android:onClick="onRadioButtonClicked"/>
                </RadioGroup>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/tv_design"
                android:id="@+id/registeration_distance_rl">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Select distance (Click Me!)"
                    android:id="@+id/registeration_tvdistance"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                >

                <RelativeLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/tv_design"
                    android:layout_margin="4dp"
                    android:id="@+id/registeration_rl_acre"
                    >
                    <TextView
                        android:layout_margin="16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/acre"
                        android:id="@+id/registeration_tvacre"
                        android:layout_centerInParent="true"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/registeration_rl_feet"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/tv_design">
                    <TextView
                        android:id="@+id/registeration_tvfeet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_margin="16dp"
                        android:text="@string/feet" />

                </RelativeLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/registeration_acrepanel">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter acre"
                    android:id="@+id/registeration_edacre"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/registeration_feetpanel"
                android:visibility="gone">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter width"
                    android:id="@+id/registeration_edfw"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter height"
                    android:id="@+id/registeration_edfh"/>
            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter number of plant"
                android:id="@+id/registeration_ednop"
                android:inputType="numberDecimal"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter password"
                android:id="@+id/registeration_edpassword"
                android:inputType="textPassword"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter confirm password"
                android:id="@+id/registeration_edconfirm"
                android:inputType="textPassword"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/registeration_btnupload"
                android:text="Next"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>